--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c"
-                       PRIV_REQUIRES xn_ota_manager xn_web_wifi_manger xn_audio_manager xn_cloud_audio
+                       PRIV_REQUIRES xn_ota_manager xn_web_wifi_manger xn_audio_manager
                        INCLUDE_DIRS "")
